examples/fail/semantic/invalid_cast.bina
// EXPECT_SEMANTIC_ERROR: invalid cast from string to bool
fn main() -> int {
    let x = cast<bool>("true");
    return 0;
}
